# vision_segmentation_api

./: .dockerignore  .gitattributes  .gitignore  .slugignore  Dockerfile  README.md  pyproject.toml  requirements.txt  temp.tar
.github/workflows/: deploy.yml
api/: main.py
app/: app.py  app_fastapi.py
model/saved_model_vgg16_unet/: fingerprint.pb  saved_model.pb
model/saved_model_vgg16_unet/variables/: variables.data-00000-of-00001  variables.index
tests/: test_api.py
