[tool.poetry]
name = "vision-segmentation"
version = "0.1.0"
description = "Déploiement d'un modèle de segmentation sémantique avec FastAPI"
authors = ["Julien Cantalapiedra <jcantalapiedra1@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "0.100.0"
httpx = "^0.24.0"
tensorflow = "^2.18.0"
tensorflow-io-gcs-filesystem = "0.31.0"
numpy = "1.26.4"
opencv-python-headless = "^4.11.0.86"
python-multipart = "^0.0.20"
uvicorn = "0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
